# learn_cpp

./: .gitignore  test.cpp  test_snmp.c
AString/: AString.cpp  AString.h  Astr.files  Makefile  a.out  main.cpp
AString/nbproject/: configurations.xml  project.xml
BoostFilesystem_lib/: main.cpp
BoostFilesystem_lib/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
BoostFilesystem_size/: main.cpp
BoostFilesystem_size/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
CheckGDB/: main.cpp
ColculatorGit/: main.cpp
ColculatorGit/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  project.xml
CopyConstructor/CopyConstr/: hasptr.cpp  hasptr.h  main.cpp
Cpp_Examples/cpp_examples/: main.cpp
Cpp_Pointer_Exemple/cppp_pointer_exemple/: CMakeLists.txt
Enum_Prodjekt/: Makefile  main.cpp
FileManager/: CMakeLists.txt  README.txt
FileManager/includes/: FileManager.h
FileManager/src/: FileManager.cpp  main.cpp
GitHW1/: main.cpp
GitHW1/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  project.xml
GradeBook_with_2_Mas/: GradeBook_2Mass.cpp  GradeBook_2Mass.h  main.cpp
GradeBook_with_2_Mas/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
MAP/graph/: main.cpp
NetSnmp/: Makefile  NetSnmp.cpp  NetSnmp.h  NetSnmpDelet.h  NetSnmpDeletPdu.h  NetSnmpDeletResponse.h  SnmpError.h  a.out  main.cpp  tester.cpp
NetSnmp/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
Net_Snmp_Prodjekt2/: Makefile  main.cpp  netsnmp.cpp  netsnmp.h
Operatoru/: OperatorsBase.h  OperatorsCpp.cpp  OperatorsInformation.h  OperatorsKlass.h  OperatorsLink.h  OperatorsPointers.h  OperatoruBase.h  OperatoruCpp.cpp  OperatoruSsulka.h  OperatoruUkazatel.h  main.cpp
Operatoru/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
ProdjektGit/: main.cpp
ProdjektGit/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  project.xml
RelatedMyList/RelatedMyList/: main.cpp
Shell_Project/: main.c  utils.c  utils.h
Spisok/: main.cpp
Spisok2/Spisok2/: main.cpp
Task1_Argc_Argv/: Makefile  a.out  main.cpp
Task2_Argc_Argv/: Makefile  main.cpp
Task3_Argc_Argv/: Makefile  main.cpp
Task4_Prodjekt/: Makefile  main.cpp
Vim_Test_Prog/: AvtoWord.cpp  main.cpp  vim_get_set.h  vim_test_prog.h
interpretator/: a.out  instruction.txt  instruction2.txt  interp2.cpp  interpretator.cpp
lesonsGit1/: main.cpp
lesonsGit1/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  (+2 more)
lesson1/: a.out  lesson1.1.cpp  lesson1.cpp  lesson1.cpp~
lesson2/: lesson2.cpp  lesson3.cpp
lesson3/: libcurl.cpp
(+12 files in other folders)
